[package]
name = "pallet-certificate"
version = "0.0.1"
authors = ["Robin <obin.mf@gmail.com>"]
edition = "2018"
license = "Apache-2"
homepage = ""
repository = ""
description = "Substrate pallet to manage online certificate"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { version = "3.0.0", default-features = false, path = "../../primitives/std" }
sp-io = { version = "3.0.0", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "3.0.0", default-features = false, path = "../../primitives/runtime" }
sp-core = { version = "3.0.0", default-features = false, path = "../../primitives/core" }
frame-benchmarking = { version = "3.0.0", default-features = false, path = "../benchmarking", optional = true }
frame-support = { version = "3.0.0", default-features = false, path = "../support" }
frame-system = { version = "3.0.0", default-features = false, path = "../system" }
pallet-organization = { default-features = false, path = "../organization"}
pallet-timestamp = { version = "3.0.0", default-features = false, path = "../timestamp" }

[dev-dependencies]
sp-core = { version = "3.0.0", path = "../../primitives/core" }
pallet-balances = { version = "3.0.0", path = "../balances" }


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = ["frame-benchmarking"]
