[package]
name = "pallet-did"
version = "0.0.1"
authors = ["Robin Syihab <robin.syihab@gmail.com>"]
edition = "2018"
license = "GPL-3"
homepage = ""
repository = ""
description = "Nuchain decentralized identifiers (DIDs) pallet."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# serde = { version = "1.0.101", optional = true }
# codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
# sp-std = { version = "3.0.0", default-features = false, path = "../../primitives/std" }
# sp-core = { version = "3.0.0", default-features = false, path = "../../primitives/core" }
# sp-io = { version = "3.0.0", default-features = false, path = "../../primitives/io" }
# sp-runtime = { version = "3.0.0", default-features = false, path = "../../primitives/runtime" }
# frame-benchmarking = { version = "3.0.0", default-features = false, path = "../benchmarking", optional = true }
# frame-support = { version = "3.0.0", default-features = false, path = "../support" }
# frame-system = { version = "3.0.0", default-features = false, path = "../system" }
# pallet-timestamp = { version = "3.0.0", default-features = false, path = "../../frame/timestamp" }

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0", default-features = false, path = "../../primitives/std" }
sp-io = { version = "5.0.0", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "5.0.0", default-features = false, path = "../../primitives/runtime" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, path = "../../frame/timestamp" }

frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true }


[dev-dependencies]
sp-core = { version = "5.0.0", path = "../../primitives/core" }
# pallet-balances = { version = "3.0.0", path = "../balances" }

[features]
default = ["std"]
std = [
	# "serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-core/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
  "pallet-timestamp/std",
]
runtime-benchmarks = ["frame-benchmarking"]

