[package]
authors = ["Robin Syihab <robin.syihab@gmail.com>"]
description = "Nuchain decentralized identifiers (DIDs) pallet."
edition = "2018"
homepage = ""
license = "GPL-3"
name = "pallet-did"
readme = "README.md"
repository = ""
version = "1.0.3"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# serde = { version = "1.0.101", optional = true }
# codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
# sp-std = { version = "3.0.0", default-features = false, path = "../../primitives/std" }
# sp-core = { version = "3.0.0", default-features = false, path = "../../primitives/core" }
# sp-io = { version = "3.0.0", default-features = false, path = "../../primitives/io" }
# sp-runtime = { version = "3.0.0", default-features = false, path = "../../primitives/runtime" }
# frame-benchmarking = { version = "3.0.0", default-features = false, path = "../benchmarking", optional = true }
# frame-support = { version = "3.0.0", default-features = false, path = "../support" }
# frame-system = { version = "3.0.0", default-features = false, path = "../system" }
# pallet-timestamp = { version = "3.0.0", default-features = false, path = "../../frame/timestamp" }

# sp-core = {version = "6.0.0", path = "../../primitives/core"}
# third-party dependencies
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
  "max-encoded-len",
]}
frame-benchmarking = {version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true}
frame-support = {version = "4.0.0-dev", default-features = false, path = "../support"}
frame-system = {version = "4.0.0-dev", default-features = false, path = "../system"}
pallet-timestamp = {version = "4.0.0-dev", default-features = false, path = "../../frame/timestamp"}
scale-info = {version = "2.0.1", default-features = false, features = ["derive"]}
sp-io = {version = "6.0.0", default-features = false, path = "../../primitives/io"}
sp-runtime = {version = "6.0.0", default-features = false, path = "../../primitives/runtime"}
sp-std = {version = "4.0.0", default-features = false, path = "../../primitives/std"}

[dev-dependencies]
pallet-balances = {version = "4.0.0-dev", default-features = false, path = "../balances"}
sp-core = {version = "6.0.0", default-features = false, path = "../../primitives/core"}

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
  "codec/std",
  "sp-std/std",
  "sp-io/std",
  "sp-runtime/std",
#   "sp-core/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-timestamp/std",
]
try-runtime = ["frame-support/try-runtime"]
