[package]
authors = ["Robin Syihab <robin.syihab@gmail.com>"]
description = "Nuchain decentralized identifiers (DIDs) pallet."
edition = "2021"
homepage = "https://nuchain.network"
license = "GPL-3"
name = "pallet-did"
readme = "README.md"
repository = ""
version = "1.0.3"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
  "max-encoded-len",
]}
frame-benchmarking = {version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true}
frame-support = {version = "4.0.0-dev", default-features = false, path = "../support"}
frame-system = {version = "4.0.0-dev", default-features = false, path = "../system"}
pallet-timestamp = {version = "4.0.0-dev", default-features = false, path = "../../frame/timestamp"}
scale-info = {version = "2.0.1", default-features = false, features = ["derive"]}
sp-io = {version = "6.0.0", default-features = false, path = "../../primitives/io"}
sp-core = {version = "6.0.0", default-features = false, path = "../../primitives/core"}
sp-runtime = {version = "6.0.0", default-features = false, path = "../../primitives/runtime"}
sp-std = {version = "4.0.0", default-features = false, path = "../../primitives/std"}
serde = {version = "1.0.136", optional = true, features = ["derive"]}

[dev-dependencies]
pallet-balances = {version = "4.0.0-dev", default-features = false, path = "../balances"}
sp-core = {version = "6.0.0", default-features = false, path = "../../primitives/core"}

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
  "codec/std",
  "sp-std/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-core/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-timestamp/std",
  "serde"
]
try-runtime = ["frame-support/try-runtime"]
