[package]
name = "pallet-erc741"
version = "3.0.0"
authors = ["Robin Syihab <robin.syihab@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://nuchain.network"
repository = "https://github.com/nusantarachain/nuchain"
description = "This pallet combining NFT with Intelectual Property (IP)"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false, path = "../../primitives/std" }
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = { version = "3.0.0", default-features = false, path = "../../primitives/runtime" }
# Needed for type-safe access to storage DB.
frame-support = { version = "3.0.0", default-features = false, path = "../support" }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-system = { version = "3.0.0", default-features = false, path = "../system" }
frame-benchmarking = { version = "3.0.0", default-features = false, path = "../benchmarking", optional = true }

[dev-dependencies]
sp-core = { version = "3.0.0", path = "../../primitives/core" }
sp-std = { version = "3.0.0", path = "../../primitives/std" }
sp-io = { version = "3.0.0", path = "../../primitives/io" }
pallet-balances = { version = "3.0.0", path = "../balances" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
