[package]
edition = '2018'
name = 'pallet-nft'
version = '1.0.0'
authors = ['Nusantara Chain <nusanntarachain@gmail.com>', 'Dan Forbes <dan@parity.io>']
license = 'Apache 2.0'
description = 'A unique asset (NFT) interface and a Substrate FRAME implementation optimized for commodity assets.'
homepage = 'https://nuchain.network'
repository = 'https://github.com/nusantarachain/nuchain'
readme = 'README.md'
keywords = ['substrate', 'frame', 'nft', 'blockchain', 'asset']
categories = ['cryptography::cryptocurrencies', 'data-structures', 'no-std']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.116", optional = true }

# Substrate dependencies
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.1.1' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
]
