[package]
name = "pallet-organization"
version = "1.0.3"
authors = ["Robin Syihab <obin.mf@gmail.com>"]
edition = "2018"
license = "Apache-2"
homepage = ""
repository = ""
description = "Organization pallet for Nuchain"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# serde = { version = "1.0.101", optional = true }
# codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
enumflags2 = { version = "0.6.2" }
# sp-std = { version = "3.0.0", default-features = false, path = "../../primitives/std" }
# sp-core = { version = "3.0.0", default-features = false, path = "../../primitives/core" }
# sp-io = { version = "3.0.0", default-features = false, path = "../../primitives/io" }
# sp-runtime = { version = "3.0.0", default-features = false, path = "../../primitives/runtime" }
# frame-benchmarking = { version = "3.0.0", default-features = false, path = "../benchmarking", optional = true }
# frame-support = { version = "3.0.0", default-features = false, path = "../support" }
# frame-system = { version = "3.0.0", default-features = false, path = "../system" }
pallet-did = { version = "1.0.3", default-features = false, path = "../did" }

sp-core = { version = "6.0.0", default-features = false, path = "../../primitives/core" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0", default-features = false, path = "../../primitives/std" }
sp-io = { version = "6.0.0", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "6.0.0", default-features = false, path = "../../primitives/runtime" }
# frame-benchmarking = { version = "3.0.0", default-features = false, path = "../benchmarking", optional = true }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true }


[dev-dependencies]
sp-core = { version = "6.0.0", default-features = false, path = "../../primitives/core" }
pallet-balances = { version = "4.0.0-dev", path = "../balances" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, path = "../../frame/timestamp" }
lazy_static = "1.4.0"

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
  "pallet-did/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
