[package]
name = "pallet-did-runtime-api"
version = "0.1.0"
edition = "2021"
authors = ["Robin Syihab <r@ansvia.com>"]
license = "LGPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# Substrate Dependencies
sp-api = { version = "4.0.0-dev", default-features = false, path = "../../../../primitives/api" }
sp-runtime = { version = "6.0.0", default-features = false, path = "../../../../primitives/runtime" }
sp-std = { version = "4.0.0", default-features = false, path = "../../../../primitives/std" }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
]

